feat: Transform GeoJson to RDF+WKT format (#617)
Co-authored-by: Tomvbe <34196062+Tomvbe@users.noreply.github.com>
Co-authored-by: Tom Van Besien <tom.vanbesien@gmail.com>